--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
+    <a href="about.html">About US</a>
     <div class="container d-flex align-items-center h-100">
       <div class="row">
         <header class="text-center col-12">
@@ -27,7 +28,9 @@
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
           <hr> 
-          <a href="https://www.linkedin.com/in/peter-ohue-3146a41aa/"><button class="btn btn-primary btn-xl">Find out more</button></a>
+          <!-- <a href="https://github.com/OhuePeter/WeskillUp.git"><button class="btn btn-primary btn-xl">Find out more</button></a> -->
+
+          <a href="https://instagram.com/hannahohue?igshid=OGQ5ZDc2ODk2ZA=="><button class="btn btn-primary btn-xl">Find out more</button></a>
         </section>
       </div>
     </div>
